style.css
body {
    margin: 0;
    font-family: sans-serif;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

button {
    padding: 5px 12px 6px 12px;
    border: 3px solid rgb(94, 86, 86);
    border-radius: 8px;
    width: 100px;
    font-weight: bold; 
    height: 30px;
    flex: initial;
    margin-top: 50px;
    margin-bottom: 10px;
    box-sizing: border-box;
    background-color:rgb(0, 0, 0);
    color: aliceblue;
    text-align: center;
}

.container {
    display: flex;
    flex: initial;
    justify-content: center;
    align-items: center;
    padding: 0;
    width: 100vw;
    max-height: 800px;
    flex-direction: column; 
    margin-bottom: auto;
    margin-top: 100px;
    flex-grow: 0;
}

.row {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: initial;
    flex-grow: 0;
    width: 100vw;
}

.box {
    border: 1px solid black;
    border-top-width: 0.5px;
    border-bottom-width: 0.5px;
    margin: 0;
    box-sizing: border-box;
}

